--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>KAUAI PNEUS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Pneus" name="keywords">
+    <meta content="Kauai Pneus" name="keywords">
+    <meta content="Pneus" name="keywords">
     <meta content="São Gonçalo" name="keywords">
     <meta content="Pneus São Gonçalo" name="keywords">
 
