--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">KAUI PNEUS</a>. Todos direitos reservados. 
+                <p class="m-0 text-white">&copy; <a href="#">KAUAI PNEUS</a>. Todos direitos reservados. 
                 </p>
             </div>
          
@@ -251,7 +251,9 @@
     <!-- Footer End -->
 
    <!-- botão flutuante whatsapp -->
-    <a href="https://api.whatsapp.com/send?phone=5521964136234text=Olá" class="whatsapp-button" target="_blank" style="position: fixed;  right: 15px; bottom: 15px;">
+    <a 
+    href="https://api.whatsapp.com/send?phone=5521964136234&text=Olá%Kauai%Pneus."
+    class="whatsapp-button" target="_blank" style="position: fixed;  right: 15px; bottom: 15px;">
     <img src="https://i.ibb.co/VgSspjY/whatsapp-button.png" alt="botão whatsapp">
   </a>
 
