--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
    <!-- botão flutuante whatsapp -->
     <a 
-    href="https://api.whatsapp.com/send?phone=5521964136234&text=Olá%Kauai%Pneus."
+    href="https://api.whatsapp.com/send?phone=5521964136234&text=Ola%Kauai%Pneus."
     class="whatsapp-button" target="_blank" style="position: fixed;  right: 15px; bottom: 15px;">
     <img src="https://i.ibb.co/VgSspjY/whatsapp-button.png" alt="botão whatsapp">
   </a>
